<resources>
    <string name="app_name">Travel Journal</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_account">Create an account</string>
    <string name="to_get_started_now">to start your journey!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="it_s_great_to_see_you_again">It\'s great to see you again</string>
    <string name="login_to_continue">login to continue</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="your_personal_travel_diary">Your personal travel diary</string>
    <string name="logout">Logout</string>
    <string name="preserve_the_important_moments_of_your_journey">Preserve the important moments of your journey.</string>
    <string name="search_your_journeys">Search your journeys</string>
    <string name="send">Send</string>
    <string name="generate_gpx">Generate Gpx</string>
    <string name="get_ready_for_your_nnext_adventure">Get ready for your \nnext adventure!</string>
    <string name="start_new_trip">Start New Trip</string>
    <string name="enjoy_your_wonderful_journey">Enjoy your wonderful \njourney!</string>
    <string name="recording">Recording</string>
    <string name="end_trip">End trip</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="recipient">Recipient</string>
    <string name="generate_and_send_your_gpx">Generate and send your gpx.</string>
    <string name="share_gpx_file">Share Gpx File</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="app_language">App Language</string>
    <string name="upload">  Upload</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="give_this_trip_a_name">Give this trip a name.</string>
    <string name="trip_name">Trip name</string>
    <string name="save">Save</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="username_must_not_contain_white_space">Username must not contain white space</string>
    <string name="username_must_be_5_chars_at_least">Username must be 5 chars at least</string>
    <string name="Username_must_beless_than_16_chars">Username must be less than 16 chars</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="password_must_not_contain_whitespaces">Password must not contain whitespaces</string>
    <string name="password_must_be_at_least_5_chars_and_1_digit">Password must be at least 5 chars and 1 digit</string>
</resources>